# FfmpegUiConverter

./: .gitignore  README.md
ffmpegUI/: .gitignore  CMakeLists.txt  Test.h
ffmpegUI/Body/: ConversionOptions.cpp  FFmpegConverter.cpp  Menu.cpp
ffmpegUI/Heading/: ConversionOptions.h  FFmpegConverter.h  History.h  ICommand.h  Menu.h
ffmpegUI/tests/: CommandParser_tests.cpp  ConversionOptions_tests.cpp  History_tests.cpp
ffmpeg_cli/: CMakeLists.txt
ffmpeg_cli/include/: CLI.h  CommandParser.h
ffmpeg_cli/src/: CLI.cpp  CommandParser.cpp  ConversionOptions.cpp  FFmpegConverter.cpp  History.cpp  main.cpp
ffmpeg_cli/tests/: FFmpegConverter_tests.cpp  main.cpp  test_converter.cpp  test_history.cpp  test_options.cpp  test_parser.cpp
